tests/baselines/reference/propertyAndAccessorWithSameName(strict=true).errors.txt
propertyAndAccessorWithSameName.ts(2,5): error TS2300: Duplicate identifier 'x'.
propertyAndAccessorWithSameName.ts(2,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
propertyAndAccessorWithSameName.ts(3,9): error TS2300: Duplicate identifier 'x'.
propertyAndAccessorWithSameName.ts(9,5): error TS2300: Duplicate identifier 'x'.
propertyAndAccessorWithSameName.ts(9,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
propertyAndAccessorWithSameName.ts(10,9): error TS2300: Duplicate identifier 'x'.
propertyAndAccessorWithSameName.ts(10,9): error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
propertyAndAccessorWithSameName.ts(10,11): error TS7006: Parameter 'v' implicitly has an 'any' type.
propertyAndAccessorWithSameName.ts(14,13): error TS2300: Duplicate identifier 'x'.
propertyAndAccessorWithSameName.ts(14,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
propertyAndAccessorWithSameName.ts(15,9): error TS2300: Duplicate identifier 'x'.
propertyAndAccessorWithSameName.ts(18,9): error TS2300: Duplicate identifier 'x'.
propertyAndAccessorWithSameName.ts(18,9): error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
propertyAndAccessorWithSameName.ts(18,11): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== propertyAndAccessorWithSameName.ts (14 errors) ====
    class C {
        x: number;
        ~
!!! error TS2300: Duplicate identifier 'x'.
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        get x() { // error
            ~
!!! error TS2300: Duplicate identifier 'x'.
            return 1;
        }
    }
    
    class D {
        x: number;
        ~
!!! error TS2300: Duplicate identifier 'x'.
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        set x(v) { } // error
            ~
!!! error TS2300: Duplicate identifier 'x'.
            ~
!!! error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
              ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }
    
    class E {
        private x: number;
                ~
!!! error TS2300: Duplicate identifier 'x'.
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        get x() { // error
            ~
!!! error TS2300: Duplicate identifier 'x'.
            return 1;
        }
        set x(v) { }
            ~
!!! error TS2300: Duplicate identifier 'x'.
            ~
!!! error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
              ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }